# konvertor

./: CMakeLists.txt  README.md
config/: config.json
docs/: source_code_guide.md  system_design.md
include/controllers/: StaticFileController.h
src/: main.cc
src/controllers/: ConverterController.cc  ConverterController.h  StaticFileController.cc  StatsController.cc  StatsController.h
src/services/: ConversionManager.cc  ConversionManager.h  RateLimiter.cc  RateLimiter.h
www/: 404.html  api_docs.html  app.js  index.html  style.css
